--- a/src/template/home.css
+++ b/src/template/home.css
@@ -83,7 +83,7 @@ ul li:nth-child(5) a:hover .fab {
 .block {
   animation: appear linear;
   animation-timeline: view() !important;
-  animation-range: entry 0%;
+  animation-range: entry 0% !important;
 }
 .z-container{
   width: 80%;
